# gnss_io_unsupervised_detection

./: README.md  pyproject.toml  requirements.txt
analysis/: README.md  details.md  exploring_cno_io_transition.ipynb  exploring_trajectories.ipynb  gnss_test_raw_data_1713259013.4408054_features.pickle  gnss_test_raw_data_1713259484.0477698_features.pickle  gnss_test_raw_data_1716472705.1320515_features.pickle  gnss_test_raw_data_1716473898.1400812_features.pickle  gnss_test_raw_data_1716475018.8516796_features.pickle  gnss_test_raw_data_1716535003.8263893_features.pickle  processing_gnss_features.ipynb  reading_gnss_data.ipynb
data/: README.md
data/20240416/: details.md  gnss_test_raw_data_1713259484.0477698.pickle
data/20240429/: README.md  gnss_test_raw_data_1714385128.2258465.pickle  gnss_test_raw_data_1714394039.3773313.pickle  gnss_test_raw_data_1714394757.1566913.pickle
data/20240521/: details.md  gnss_test_raw_data_1716472705.1320515.pickle  gnss_test_raw_data_1716473898.1400812.pickle  gnss_test_raw_data_1716475018.8516796.pickle  gnss_test_raw_data_1716535003.8263893.pickle
extraction/: README.md  read_gnss_extract_lat_lon.py  read_gnss_n9m.py
